# ProjetoCloud-Analise-B3

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: main_app-projeto-b3.yml  main_b3-frontend.yml  main_func-projeto-b3.yml
api-backend/: .env.example  .gitignore  MIGRATION_GUIDE.md  README.md  alembic.ini  main.py  requirements.txt  start.py  test_api.py
api-backend/alembic/: env.py
api-backend/alembic/versions/: 1_create_cotacoes_table.py  __init__.py
api-backend/app/: __init__.py  database.py  main.py  models.py
backend/: Dockerfile  alembic.ini  azure_storage.py  extract.py  extract_and_upload.py  pyproject.toml  run_pipeline.py  test_pipeline.py  transform_and_save.py  transform_load.py
backend/alembic/: env.py
backend/alembic/versions/: 1_create_cotacoes_table.py
backend/api/: main.py
backend/etl/common/: config.py  storage.py
backend/etl/extract/: b3_extractor.py
backend/etl/load/: postgres_loader.py
backend/etl/transform/: xml_parse.py
frontend/: README.md  app.py  requirements.txt
functions-etl/: .funcignore  b3_extractor.py  backfill_historico.py  config.py  function_app.py  postgres_loader.py  requirements.txt  storage.py  xml_parse.py
functions-etl/etl/common/: config.py  storage.py
functions-etl/etl/extract/: b3_extractor.py
functions-etl/etl/load/: postgres_loader.py
functions-etl/etl/transform/: xml_parse.py
