[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lucas Serejo <lucasj.serejo11@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
requests = ">=2.32.5,<3.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
