[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lucas Serejo <lucasj.serejo11@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = ">=2.32.5,<3.0.0"
azure-storage-blob = "^12.26.0"
psycopg2-binary = "^2.9.9"
lxml = "^6.0.2"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
fastapi = "^0.121.1"
uvicorn = "^0.38.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
